Closed
Bug 1779096
Opened 3 years ago
Closed 3 years ago
Crash in [@ mozilla::dom::Promise::State]
Categories
(Core :: Layout: Text and Fonts, defect, P3)
Core
Layout: Text and Fonts
Tracking
()
RESOLVED
FIXED
104 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox-esr102 | --- | unaffected |
| firefox102 | --- | unaffected |
| firefox103 | --- | unaffected |
| firefox104 | --- | fixed |
People
(Reporter: aosmond, Assigned: aosmond)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/8aee1e5f-35e4-4e2a-8c16-3ba6a0220710
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll mozilla::dom::Promise::State const dom/promise/Promise.cpp:920
1 xul.dll mozilla::dom::FontFaceSetImpl::CheckLoadingFinished layout/style/FontFaceSetImpl.cpp:879
2 xul.dll mozilla::dom::FontFaceSetDocumentImpl::StyleSheetLoaded layout/style/FontFaceSetDocumentImpl.cpp:719
3 xul.dll mozilla::css::Loader::NotifyObservers layout/style/Loader.cpp:1611
4 xul.dll static mozilla::SharedStyleSheetCache::LoadCompleted layout/style/SharedStyleSheetCache.cpp:68
5 xul.dll mozilla::MozPromise<bool, bool, 1>::ThenValue<`lambda at /builds/worker/checkouts/gecko/layout/style/Loader.cpp:1580:11', `lambda at /builds/worker/checkouts/gecko/layout/style/Loader.cpp:1584:11'>::DoResolveOrRejectInternal xpcom/threads/MozPromise.h:846
6 xul.dll mozilla::MozPromise<bool, bool, 1>::ThenValueBase::ResolveOrRejectRunnable::Run xpcom/threads/MozPromise.h:487
7 xul.dll mozilla::SchedulerGroup::Runnable::Run xpcom/threads/SchedulerGroup.cpp:140
8 xul.dll mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:851
9 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1205
| Assignee | ||
Comment 1•3 years ago
|
||
Updated•3 years ago
|
Keywords: regression
Comment 2•3 years ago
|
||
Set release status flags based on info from the regressing bug 1771493
status-firefox102:
--- → unaffected
status-firefox103:
--- → unaffected
status-firefox104:
--- → affected
status-firefox-esr102:
--- → unaffected
status-firefox-esr91:
--- → unaffected
Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/81cd4125a2d2
Clear FontFaceSetImpl::mOwner when destroyed. r=emilio
Comment 4•3 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•