Bug 1779096 - Clear FontFaceSetImpl::mOwner when destroyed. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D151554